--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -40,7 +40,9 @@ header h1 {
 .fixed-header {
   position: fixed;
   top:0; left:0;
-  width: 100%; 
+  width: 100%;
+  margin: 0 auto;
+  float: left;
 }
 
 nav {
