--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -183,7 +183,29 @@ polyline{
     font-style: normal;
     font-weight: 700;
 }
+@media (min-width: 1281px) {
+  	.labelName {
+	    font-size: 0.9em;
+	    font-style: italic;
+	}
+}
 
+
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+   	.labelName {
+	    font-size: 0.9em;
+	    font-style: italic;
+	} 
+}
+
+
+@media (min-width: 320px) and (max-width: 480px) {
+	.labelName {
+	    font-size: 1.5em;
+	    font-style: italic;
+	}  
+}
 /* In biology we generally italicise species names. */
 .labelName {
     font-size: 0.9em;
