--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 body {
-  background-color:green;
+  background-color:#d5f4e6;
   font-size: 15px;
   font-family: 'Source Sans Pro', sans-serif;
   width: 100%;
